# review-summarizer

./: README.md  pyproject.toml
review_summarizer/: __main__.py
review_summarizer/query/: bestbuy_ca.py  review_querier.py
